# joryu

./: .gitignore  AUDIT.md  CLAUDE.md  INTEGRATION_NOTES.md  LICENSE  NOTICE  README.md  SPEC.md  pyproject.toml
.claude/skills/joryu/: SKILL.md
.claude/skills/joryu/reference/: api.md  conflict_taxonomy.md  down_hints.md
.claude/skills/joryu/templates/: data_migration_resumable.py  empty_migration.py  per_dialect_sql.py
examples/ci/: README.md  github_actions.yml  gitlab_ci.yml  pre-commit.yaml
src/joryu/: __init__.py  _op_impl.py  _runtime.py  _types_impl.py  api.py  autogen.py  checkpoint.py  cli.py  config.py  conflicts.py  downhint.py  env.py  exceptions.py  explain.py  generate.py  loader.py  lock.py  op.py  op_core.py  progress.py  registry.py  runner.py  snapshot.py  state.py  testing.py  types.py  verify.py  virtual_schema.py
src/joryu/importer/: __init__.py  alembic_importer.py
tests/: conftest.py  test_alter_column_sqlite.py  test_apply_async.py  test_apply_sqlite.py  test_autogen.py  test_autogen_richer.py  test_batch_preserves_indexes.py  test_checkpoint_and_step.py  test_cli.py  test_create_index_concurrent.py  test_create_table_mismatch.py  test_cross_references.py  test_downhint.py  test_ensure_mismatch.py  test_explain.py  test_importer.py  test_integration_wave2.py  test_prod_guard.py  test_progress.py  test_recovery.py  test_registry_and_ops.py  test_retry_paused.py  test_snapshot.py  test_spec_compliance.py  test_types.py  test_unit_testing.py  test_verify.py  test_virtual_schema.py
